[package]
name = "roro"
description = "Simple CLI tool for tracking work hours written in Rust."
version = "0.0.0-dev.1"
license = "MIT"
authors = ["Christian Mayer <christian@fox21.at>"]
homepage = "https://github.com/TheFox/roro"
documentation = "https://github.com/TheFox/roro"
repository = "https://github.com/TheFox/roro"
keywords = ["time-tracking", "cli"]
categories = ["command-line-utilities"]
edition = "2018"
default-run = "roro"

[dependencies]
roro-lib = { path = "roro_lib" }
clap = "^2.33.0"

[workspace]
members = [
    "roro_lib",
]

[profile.release]
panic = 'abort'

[[bin]]
name = "roro"
path = "src/main.rs"
