[package]
name = "roro-lib"
description = "Simple CLI tool for tracking work hours written in Rust."
version = "0.0.0"
license = "MIT"
authors = ["Christian Mayer <christian@fox21.at>"]
homepage = "https://github.com/TheFox/roro"
documentation = "https://github.com/TheFox/roro"
repository = "https://github.com/TheFox/roro"
keywords = ["time-tracking", "cli"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
